--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.affectli</groupId>
-    <artifactId>affectli_UI</artifactId>
+    <groupId>com.sampleProject</groupId>
+    <artifactId>sampleProject</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -36,9 +36,10 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.3.3</version>
+            <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -132,7 +133,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>Affectli_UI_Automation</projectName>
+                            <projectName>SampleProjectAutomation</projectName>
                             <outputDirectory>${project.build.directory}</outputDirectory>
                             <inputDirectory>${project.build.directory}</inputDirectory>
                             <jsonFiles>
